--- a/Version1/Version1/index.html
+++ b/Version1/Version1/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=Version1/accueil.html">
     <title>Redirection...</title>
 </head>
 <body>
-    <p>Redirection en cour vers Version1/Accueil.htmlAccueil</a></p>    
+    <p>Redirection en cour vers Version1/Accueil.htmlAccueil</p>    
 </body>
 </html>
