--- a/Version1/Version1/index.html
+++ b/Version1/Version1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=Version1/accueil.html">
+    <meta http-equiv="refresh" content="0; url=Version1/Version1/accueil.html">
     <title>Redirection...</title>
 </head>
 <body>
