--- a/Version1/Version1/accueil.html
+++ b/Version1/Version1/accueil.html
@@ -35,8 +35,8 @@
             </div>
         </main>
 
-        <FOOTER>
+        <footer>
             <p>© copyrights Theoo réalisé le 09/01/2026</p>
-        </FOOTER>
+        </footer>
     </body>
 </html>
