nom copyright et chemin acces image

--- a/Version1/Version1/bulbes.html
+++ b/Version1/Version1/bulbes.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="../Images/ACCUEIL.jpg" alt="logo accueil">
+            <img src="../../Images/ACCUEIL.JPG" alt="logo accueil">
             <h1>Société Lafleur</h1>
             <h3>6, cloitre St Aignan</h3>
             <h3>45000, Orléans</h3>
@@ -33,19 +33,19 @@
                         <th>Prix</th>
                     </tr>
                     <tr>
-                        <td><img src="../Images/bulbes_begonia.jpg" alt="bulbes begonia"></td>
+                        <td><img src="../../Images/bulbes_begonia.jpg" alt="bulbes begonia"></td>
                         <td>b01</td>
                         <td>3 bulbes de bégonias</td>
                         <td>5€</td>
                     </tr>
                     <tr>
-                        <td><img src="../Images/bulbes_dahlia.jpg" alt="bulbes dahlia"></td>
+                        <td><img src="../../Images/bulbes_dahlia.jpg" alt="bulbes dahlia"></td>
                         <td>b02</td>
                         <td>10 bulbes de dahlias</td>
                         <td>12€</td>
                     </tr>
                     <tr>
-                        <td><img src="../Images/bulbes_glaieul.jpg" alt="bulbes glaieul"></td>
+                        <td><img src="../../Images/bulbes_glaieul.jpg" alt="bulbes glaieul"></td>
                         <td>b03</td>
                         <td>50 glaïeuls</td>
                         <td>9€</td>
@@ -55,7 +55,7 @@
         </main>
         
         <footer>
-            <p>© copyrights Mathis Morais réalisé le 18 Septembre 2020</p>
+            <p>© copyrights Theo Ostyn </p>
         </footer>
     </body>
 </html>
