--- a/Version1/Version1/massifs.html
+++ b/Version1/Version1/massifs.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="../Images/ACCUEIL.jpg" alt="logo accueil">
+            <img src="../../Images/ACCUEIL.jpg" alt="logo accueil">
             <h1>Société Lafleur</h1>
             <h3>6, cloitre St Aignan</h3>
             <h3>45000, Orléans</h3>
@@ -33,19 +33,19 @@
                         <th>Prix</th>
                     </tr>
                     <tr>
-                        <td><img src="../Images/massif_marguerite.jpg" alt="bulbes begonia"></td>
+                        <td><img src="../../Images/massif_marguerite.jpg" alt="bulbes begonia"></td>
                         <td>m01</td>
                         <td>Lot de 3 marguerites</td>
                         <td>5€</td>
                     </tr>
                     <tr>
-                        <td><img src="../Images/massif_pensee.jpg" alt="bulbes dahlia"></td>
+                        <td><img src="../../Images/massif_pensee.jpg" alt="bulbes dahlia"></td>
                         <td>m02</td>
                         <td>Pour un bouquet de 6 pensées</td>
                         <td>6€</td>
                     </tr>
                     <tr>
-                        <td><img src="../Images/massif_melange.jpg" alt="bulbes glaieul"></td>
+                        <td><img src="../../Images/massif_melange.jpg" alt="bulbes glaieul"></td>
                         <td>m03</td>
                         <td>Mélange varié de 10 plantes à massif</td>
                         <td>15€</td>
@@ -55,7 +55,7 @@
         </main>
         
         <footer>
-            <p>© copyrights Mathis Morais réalise le 18 Septembre 2020</p>
+            <p>© copyrights Theo Ostyn </p>
         </footer>
     </body>
 </html>
