--- a/Version1/Version1/rosiers.html
+++ b/Version1/Version1/rosiers.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="../Images/ACCUEIL.jpg" alt="logo accueil">
+            <img src="../../Images/ACCUEIL.jpg" alt="logo accueil">
             <h1>Société Lafleur</h1>
             <h3>6, cloitre St Aignan</h3>
             <h3>45000, Orléans</h3>
@@ -33,19 +33,19 @@
                         <th>Prix</th>
                     </tr>
                     <tr>
-                        <td><img src="../Images/rosiers_gdefleur.jpg" alt="bulbes begonia"></td>
+                        <td><img src="../../Images/rosiers_gdefleur.jpg" alt="bulbes begonia"></td>
                         <td>r01</td>
                         <td>1 pied spécial "grandes fleurs"</td>
                         <td>20€</td>
                     </tr>
                     <tr>
-                        <td><img src="../Images/rosiers_parfum.jpg" alt="bulbes dahlia"></td>
+                        <td><img src="../../Images/rosiers_parfum.jpg" alt="bulbes dahlia"></td>
                         <td>r02</td>
                         <td>Une variété sélectionnée pour son parfum</td>
                         <td>9€</td>
                     </tr>
                     <tr>
-                        <td><img src="../Images/rosiers_arbuste.jpg" alt="bulbes glaieul"></td>
+                        <td><img src="../../Images/rosiers_arbuste.jpg" alt="bulbes glaieul"></td>
                         <td>r03</td>
                         <td>Rosier arbuste</td>
                         <td>8€</td>
@@ -55,7 +55,7 @@
         </main>
         
         <footer>
-            <p>© copyrights Mathis Morais réalise le 18 Septembre 2020</p>
+            <p>© copyrights Theo Ostyn </p>
         </footer>
     </body>
 </html>
